Added first servlet

--- a/src/main/webapp/principal.html
+++ b/src/main/webapp/principal.html
@@ -10,6 +10,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Hola Mundo :D</div>
-    </body>
+	<h3>Hola mundo :D</h3>
+	<h4>Ejemplo de petición con parámetros por GET</h4>
+	<form action="ejemplo1" method="post">
+		<input placeholder="Usuario" type="text" name="usuario" ><br>
+		<input placeholder="Correo electrónico" type="text" name="email"><br>
+		<input type="submit" value="ENVIAR">
+	</form>
+</body>
 </html>
